--- a/main.css
+++ b/main.css
@@ -67,6 +67,11 @@ nav ul li:hover {
 
 section {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 10rem;
 }
 
 .mobile_menu {
@@ -142,7 +147,6 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   color: var(--primary-light-color);
 }
 
@@ -198,7 +202,6 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 15rem;
   background-color: #ededed;
   min-height: 100vh;
   padding-top: 2rem;
@@ -311,16 +314,17 @@ section {
 
 .tools-education {
   background-color: var(--main-bg-color);
-  min-height: 100vh;
   width: 100vw;
   font-size: 2rem;
   color: var(--primary-light-color);
-  display: flex;
   padding: 5rem 15rem;
-  flex-direction: column;
-  padding-bottom: 5rem;
-  justify-content: center;
 }
+
+.tools-technologies {
+  width: 100%;
+}
+
+
 .tools-technologies__container {
   display: flex;
   width: 100%;
@@ -341,6 +345,10 @@ section {
 }
 .tools-technologies__box img {
   height: 10rem;
+}
+
+.education {
+  width: 100%;
 }
 
 .education__container {
@@ -533,14 +541,14 @@ section {
   .hero__content {
     max-width: 90%;
   }
-  .hero__img-container {
+.hero__img-container {
     width: 60%;
   }
   .hero__cta {
     margin-top: 2rem;
   }
   .about-me {
-    padding: 0;
+    padding: 8rem 4rem;
     align-items: center;
   }
   .about-me__content {
@@ -548,7 +556,6 @@ section {
   }
   .about-me__content--left {
     width: 100%;
-    padding: 0 2rem;
   }
   .about-me__content--right {
     margin-top: 10rem;
@@ -560,7 +567,7 @@ section {
   }
 
   .tools-education {
-    padding: 0 2rem;
+    padding: 3rem 4rem;
   }
   .tools-technologies__container {
   }
@@ -572,6 +579,9 @@ section {
   }
   .education__card {
     width: 100%;
+  }
+  .education__card:not(:first-child){
+    margin-top: 1.5rem;
   }
   .projects {
     padding: 0;
@@ -609,10 +619,10 @@ section {
     width: 60%;
   }
   .hero__cta {
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
   .about-me {
-    padding: 0;
+    padding: 5rem 3rem;
     align-items: center;
   }
   .about-me__content {
@@ -620,7 +630,6 @@ section {
   }
   .about-me__content--left {
     width: 100%;
-    padding: 0 2rem;
   }
   .about-me__content--right {
     margin-top: 10rem;
@@ -631,11 +640,6 @@ section {
     padding-bottom: 10rem;
   }
 
-  .tools-education {
-    padding: 0 2rem;
-  }
-  .tools-technologies__container {
-  }
   .tools-technologies__box {
     width: 48%;
   }
@@ -646,7 +650,7 @@ section {
     width: 100%;
   }
   .projects {
-    padding: 0;
+    padding: 3rem 3rem;
   }
   .project__card {
     flex-direction: column;
@@ -657,7 +661,7 @@ section {
     width: 100%;
   }
   .contact-me {
-    padding: 0 2rem;
+    padding: 3rem 3rem;
   }
   .contact-me form {
     width: 100%;
