fixed padding for hero element on phones. and added repo and demo links for other project cards

--- a/main.css
+++ b/main.css
@@ -613,8 +613,8 @@ section {
   nav .navbar__menu-container {
     display: flex;
   }
-  .hero__content {
-    max-width: 90%;
+  .hero {
+    padding: 0;
   }
   .hero__img-container {
     width: 60%;
