--- a/main.css
+++ b/main.css
@@ -173,6 +173,7 @@ section {
   flex-direction: column;
   max-width: 45%;
 }
+
 .hero__content__title {
   font-size: 3.5rem;
   text-align: center;
@@ -196,7 +197,31 @@ section {
   cursor: pointer;
   transition: all 0.3s ease;
 }
+.hero__cta a {
+  margin: 0 5px;
+  padding: 1rem 2rem;
+  background-color: var(--primary-light-color);
+  color: var(--main-bg-color);
+  font-size: 1.5rem;
+  font-weight: 500;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.hero__cta button  a {
+  text-decoration: none;
+}
+.hero__cta button:hover  a {
+  color: var(--primary-light-color);
+}
 .hero__cta button:hover {
+  background-color: var(--main-bg-color);
+  color: var(--primary-light-color);
+}
+.hero__cta a:hover {
   background-color: var(--main-bg-color);
   color: var(--primary-light-color);
 }
