--- a/main.css
+++ b/main.css
@@ -632,6 +632,17 @@ section {
   }
 }
 
+.contact-me form button {
+  width: 100%;
+  padding: 1rem 2rem;
+  background-color: var(--primary-light-color);
+  font-size: 2rem;
+  transition: all 0.3s ease;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   html {
     font-size: 55%;
